[gd_scene load_steps=3 format=3 uid="uid://bvppkedek6cnn"]

[ext_resource type="Script" uid="uid://c4e4vgjf10plv" path="res://scripts/UI/LoopCounter/loop_counter.gd" id="1_3no4h"]
[ext_resource type="Texture2D" uid="uid://d0cylv83g8w50" path="res://assets/Art/Image/fruit_loops.png" id="2_aks8b"]

[node name="LoopCounter" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3no4h")

[node name="CurrencyImage" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("2_aks8b")
expand_mode = 3
stretch_mode = 4

[node name="CurrencyLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
text = "17,000"
